Added CSS styles in editor page

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,9 @@ img {
 .form-control::placeholder {
   color: #bbb !important;
 }
+
+.editor {
+  position: relative;
+  width: 800px;
+  height: 400px;
+}
